--- a/requirements/base.in
+++ b/requirements/base.in
@@ -1,4 +1,5 @@
-Django==2.2.3
-django-filter==2.1.0
-djangorestframework==3.9.4
-Markdown==3.1.1
+Django==2.2.12
+django-filter==2.2.0
+djangorestframework==3.11.0
+Markdown==3.2.1
+psycopg2==2.8.5
