--- a/requirements/local.in
+++ b/requirements/local.in
@@ -1,6 +1,7 @@
-pip-tools==3.8.0
+pip-tools==4.5.1
 factory-boy==2.12.0
 pytest==5.0.0
 pytest-cov==2.7.1
 pytest-django==3.5.1
 pyodbc==4.0.26
+django-debug-toolbar==2.2
