--- a/requirements/local.in
+++ b/requirements/local.in
@@ -1,8 +1,8 @@
-pip-tools==4.5.1
-factory-boy==2.12.0
-pytest==5.0.0
-pytest-cov==2.7.1
-pytest-django==3.5.1
-pyodbc==4.0.26
-django-debug-toolbar==2.2
-pyshp==2.1.0
+pip-tools==6.5.1
+factory-boy==3.2.1
+pytest==7.0.1
+pytest-cov==3.0.0
+pytest-django==4.5.2
+#pyodbc @ file:///C:/Users/COTTRILLAD/Downloads/pyodbc-4.0.31-cp39-cp39-win32.whl
+django-debug-toolbar==3.2.4
+pyshp==2.2.0
