--- a/requirements/base.in
+++ b/requirements/base.in
@@ -1,5 +1,5 @@
-Django==2.2.27
-django-filter==21.1
-djangorestframework==3.13.1
-Markdown==3.3.6
+Django==3.2.12
+django-filter>=21.1
+djangorestframework>=3.13.1
+Markdown>=3.3.6
 psycopg2==2.8.6
